NTI-6734 fix modal from being cut off at the top of the screen

--- a/src/prompts/components/Modal.scss
+++ b/src/prompts/components/Modal.scss
@@ -1,5 +1,9 @@
 @import "~@nti/style-common";
 
+.modal-content {
+	max-height: 100vh;
+}
+
 .modal-mask {
 	@include touch-scroll;
 	overflow: {
